# substrate-node-for-gaming

./: .gitignore  Cargo.toml  README.md  Rakefile
FRAME/contracts/: Rakefile
FRAME/frame-node/runtime/: Cargo.toml
FRAME/frame-node/runtime/src/: lib.rs
FRAME/monkey/bash/: run_local.sh
contracts/flipper/: Rakefile
contracts/flipper/src/: main.rs
frame-node/pallets/utxo/: Cargo.toml
monkey/bash/: run_local.sh
monkey/nix/: flutter-shell.nix  shell.nix
monkey/rake/: cargo.rake  cargo_prelude.rake  ink_contract.rake  prelude.rake
node/: Rakefile
node-frame/: Cargo.toml  Rakefile
node-frame/cli/: Cargo.toml
node-frame/cli/bitcoin-pow/: Cargo.toml  Rakefile
node-frame/cli/bitcoin-pow/src/: lib.rs
node-frame/cli/sha3pow/: Cargo.toml
node-frame/cli/src/: chain_spec.rs  rpc.rs  service.rs
node-frame/pallets/utxo/src/: lib.rs  mock.rs  tests.rs
node-frame/runtime/: Cargo.toml  Rakefile
node-frame/runtime/src/: difficulty.rs  lib.rs
node/cli/: Cargo.toml
runtime/: Cargo.toml
