[package]
authors = ['Anonymous']
edition = '2018'
name = 'bitcoin-pow'
version = '2.0.1'

[dependencies]
parity-scale-codec = '1.3.0'
sha3 = "0.8"
rand = { version = "0.7", features = ["small_rng"] }
sc-consensus = '0.8.1'
sc-consensus-pow = '0.8.1'
sc-client-api = '2.0.1'
sp-api = '2.0.1'
sp-blockchain = '2.0.1'
sp-consensus-pow = '0.8.1'
sp-core = '2.0.1'
sp-runtime = '2.0.1'
